Fix gap between nav and UL

--- a/preview/styles.css
+++ b/preview/styles.css
@@ -37,7 +37,6 @@ nav * {
 
 nav ul {
   list-style: none;
-  margin-top: 24px;
   padding: 0;
   float: right;
 }
